# hft_jepa

./: .env  .gitignore  README.md  format.md  launch.sh  pyproject.toml  requirements.txt  setup.py
data/: DB_MBP_10
data/curating/: copulabis.ipynb  copulabis.py  copulas.ipynb  copulas.py  copulas_torun.py  correlation.ipynb  correlation.py  curating.ipynb  curating.py  extract_vol_process.py  gaussiantest.ipynb  gaussiantest.py  gaussiantestwithoutviz copy.py  hawkes_investigation.ipynb  hawkes_investigation.py  hill.ipynb  hill.py  mid_price.py  notes.md  quick_hawkes_google.ipynb  quick_hawkes_google.py  quick_hawks_google.ipynb  quick_inter_arrival_google.ipynb  quick_inter_arrival_google.py  sample.ipynb  sample.py  stationnarity.py  timeexpansion.ipynb  viz.ipynb  viz.py
data/hawkes_transform/: hawkes_curating.ipynb  hawkes_curating.py  hawkes_curating_bis.py
data/hurst_transform/: to_log_variation.py
data/viz/: viz.ipynb
examples/ac_timeseries_jepa/: __init__.py  main.py
examples/ac_timeseries_jepa/cfgs/: train.yaml
logs/: losses.csv
models/: __init__.py
models/eb_jepa/: __init__.py  architectures.py  jepa.py  logging.py  losses.py  state_decoder.py
models/eb_jepa/datasets/: __init__.py  utils.py
models/hawkes/: __init__.py  hawkes.py
models/hurst/: hurst_estimation.py
models/pyhawkes/: __init__.py
models/pyhawkes/pyhawkes/: __init__.py
models/summary/: interpretation.py  summarystatistics.py
notebooks/: ac_timeseries_jepa_explore.ipynb  ac_timeseries_jepa_explore.py  multiscale_training_compare.ipynb  multiscale_training_compare.py
refs/: plan.md
refs/hawkes/: HawkesEstim10.bbl  HawkesEstim10.tex
refs/jump/: bib.bib  text.bbl  text.tex
refs/report/: former.tex  report.tex  to_tex.py
report/: table_stats.tex
results/former/hawkes/: run1.py
results/summarystats/: AAL_stats.json  AAPL_stats.json  AMRX_stats.json  AMZN_stats.json  ANGO_stats.json  APLT_stats.json  ASAI_stats.json  AVDX_stats.json  BGC_stats.json  CGAU_stats.json  CSX_stats.json  CXW_stats.json  CX_stats.json  DBI_stats.json  ERIC_stats.json  GBDC_stats.json  GCMG_stats.json  GEO_stats.json  GOOGL_stats.json  GRAB_stats.json  GT_stats.json  HLMN_stats.json  HL_stats.json  IEP_stats.json  IE_stats.json  INTC_stats.json  IOVA_stats.json  ITUB_stats.json  KHC_stats.json  LBTYB_stats.json  LCID_stats.json  LION_stats.json  MLCO_stats.json  MSFT_stats.json  NTAP_stats.json  PBI_stats.json  PSNY_stats.json  PTEN_stats.json  PTON_stats.json  RIOT_stats.json  (+7 more)
tests/: test_eb_jepa.py  test_env.py  test_hawkes.py  test_pyhawkes.py
(+37 files in other folders)
