[project]
name = "hft"
version = "0.1.0"
description = "Repository for HFT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.2.0",
    "armagarch>=1.0.4",
    "copulalib>=2.0.1",
    "copulas>=0.12.1",
    "cython>=0.28",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "hawkes>=1.0.0",
    "hurst>=0.0.5",
    "jupyter>=1.1.1",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "ruptures>=1.1.9",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=75.8.2",
    "statsmodels>=0.14.4",
    "swig>=4.3.0",
    "tqdm>=4.67.1",
]







[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"hft" = "."} # "QR1" = "models/QR1/", "QR2" = "models/QR2/"
packages = ["hft"] # ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
